# failsafe-rs

./: .appveyor.yml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.circleci/: cache-key  cargo-clippy-check  cargo-fmt-check  cargo-lint  config.yml
benches/: circuit_breaker.rs  futures.rs  state_machine.rs  windowed_adder.rs
src/: backoff.rs  circuit_breaker.rs  clock.rs  config.rs  error.rs  failure_accrual.rs  failure_accrual_policy.rs  failure_policy.rs  failure_predicate.rs  instrument.rs  lib.rs  retry.rs  state_machine.rs  windowed_adder.rs
src/futures/: mod.rs  stream.rs
tests/: state_machine.rs
