[package]
name = "failsafe"
version = "0.3.1"
authors = ["Dmitry Galinsky <dima.exe@gmail.com>"]
description = "A circuit breaker implementation"
license = "MIT"
repository = "https://github.com/dmexe/failsafe-rs"
edition = "2018"

[dependencies]
futures-core = "0.3"
pin-project = "0.4"
rand = "0.7"
parking_lot = "0.11"

[dev-dependencies]
futures = { version = "0.3", features = ["std"] }
tokio = { version = "0.2", features = ["rt-core", "macros", "time"] }
criterion = "0.3.2"
rand_xorshift = "0.2"

[[bench]]
name = "windowed_adder"
harness = false

[[bench]]
name = "state_machine"
harness = false

[[bench]]
name = "futures"
harness = false

[[bench]]
name = "circuit_breaker"
harness = false

