[package]
name = "failsafe"
version = "1.3.0"
authors = ["Dmitry Galinsky <dima.exe@gmail.com>"]
description = "A circuit breaker implementation"
license = "MIT"
repository = "https://github.com/dmexe/failsafe-rs"
edition = "2018"

[dependencies]
futures-core = { version = "0.3", optional = true }
pin-project = { version = "1.0", optional = true }
rand = "0.8"
parking_lot = "0.12"

[dev-dependencies]
futures = { version = "0.3", features = ["std"] }
tokio = { version = "1.20", features = ["rt", "rt-multi-thread", "macros", "time"] }
criterion = { version = "0.3.6", features = ["html_reports"] }
rand_xorshift = "0.3"

[features]
default = ["futures-support"]
futures-support = ["futures-core", "pin-project"]

[[bench]]
name = "windowed_adder"
harness = false

[[bench]]
name = "state_machine"
harness = false

[[bench]]
name = "futures"
harness = false

[[bench]]
name = "circuit_breaker"
harness = false

